package app.domain.model;

import app.controller.App;

import java.util.ArrayList;
import java.util.List;

public class Test {

    /**
     *
     */
    private LabOrder labOrder;

    private List<TestParameter> testParameterList;

    /**
     * List containing the samples.
     */
    private List<Sample> sample = new ArrayList<>();

    public Test(){

    }

    /**
     * Constructs an instance of Test, receiving by parameter a lab order.
     * @param labOrder The lab order relating to the test.
     */
    public Test(LabOrder labOrder) {
        this.labOrder = labOrder;
    }


    /**
     * Returns the lab order of a test.
     * @return the lab order.
     */

    public LabOrder getLabOrder() {
        return labOrder;
    }

    /**
     * Returns the list of existing samples.
     * @return list of samples.
     */

    public List<Sample> getSample() {
        return sample;
    }



    /**
     * Returns the test parameter from a test.
     * @param parameterCode receives a parameter code by parameter and proceeds to check if this code exists.
     */

    public void addTestResult(String parameterCode, String result, String metric){
        TestParameter tParam =  getTestParameterFor(parameterCode);

    }

    private TestParameter getTestParameterFor(String parameterCode){
        for (TestParameter tParam : testParameterList) {
            if (tParam.getParameter().getCode().equals(parameterCode)) {
                return tParam;
            }
        }
        throw new IllegalArgumentException("There is no parameter with such code!");
    }

    /**
     * Returns the textual description of a test.
     * @return characteristics of a test.
     */
    @Override
    public String toString() {
        return "Test:" + labOrder + ", sample=" + sample;
    }

}
