package app.domain.model;

import app.controller.App;

public class TestParameter {

    private Parameter parameter;

    public TestParameter(){

    }

    public Parameter getParameter(){
        return parameter;

    }
}